# embedding_example

./: .gitignore  pyproject.toml
src/: example1.py  example2.py
